# MTH_345_Final

./: ApproximateCoefficients.cpp  Approximations.h  CMakeLists.txt  README.md  TestGACoefficients.cpp  particle_simulation.cpp  types.h
